# baremetal_for_c

./: .gitignore  CMakeLists.txt  README.md  mmu.md  release.sh
arch/armv7-a/: CMakeLists.txt
arch/armv7-a/inc/: arch_atomic.h  arch_compiler.h  arch_cpsr.h  arch_cpu.h  arch_exception.h  arch_fpu.h  arch_gicv2.h  arch_init.h  arch_irq.h  arch_mmu.h  arch_pmu.h
arch/armv7-a/src/: arch_cache.s  arch_cpu.c  arch_exception.s  arch_gicv2.c  arch_init.c  arch_irq.c  arch_mmu.s  arch_mpu.s  arch_pmu.s  arch_startup.s
arch/armv7-r/inc/: arch_branch_predictor.h  arch_cache.h  arch_cpu.h  arch_init.h  arch_mpu.h  arch_tcm.h
arch/armv7-r/src/: arch_branch_predictor.s  arch_cpu.c  arch_init.c  arch_irq.c  arch_mpu.s  arch_pmu.s  arch_startup.s  arch_tcm.s  arch_vectors.s
board/am3358/: linker.lds
board/e3640/: linker.lds
board/e3640/tryrtos/: CMakeLists.txt
cmake/: am3358.cmake  am5718.cmake  arm-none-eabi.cmake  e3640.cmake  stm32h750.cmake
code/arch/armv7-a/: CMakeLists.txt
code/arch/armv7-r/: CMakeLists.txt
code/board/am3358/: linker.lds
code/board/e3640/: linker.lds
code/device/am5718/: CMakeLists.txt
code/driver/am335x/: CMakeLists.txt
code/driver/am57xx/: CMakeLists.txt
code/kernel/tryrtos/: CMakeLists.txt
code/libc/: CMakeLists.txt
code/libc/inc/: libc_list.h  libc_memory.h  libc_notify.h  libc_printf.h
code/libc/src/: libc_list.c  libc_memory.c  libc_printf.c
device/am3358/inc/: device_memory.h
driver/am335x/: CMakeLists.txt
driver/e3/: CMakeLists.txt
example/am3358/: linker.lds
example/am5718/: linker.lds
script/: am3358_attach.cmm  e3640_attach.cmm
tools/trace32/: am3358_attach.cmm
(+61 files in other folders)
